@@ -2,6 +2,8 @@ package br.com.mentaltech.dataprovider.database;
 
 import br.com.mentaltech.dataprovider.database.entity.UserEntity;
 import br.com.mentaltech.dataprovider.database.mapper.DataProviderUserMapper;
+import br.com.mentaltech.dataprovider.database.repository.UserRepository;
+import br.com.mentaltech.exception.custom.UserNotFound;
 import br.com.mentaltech.usecase.domain.UserDomain;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
@@ -20,7 +22,13 @@ public class UserDataProvider {
     public UserDomain login(final String email, final String password ) {
         List<UserEntity> userEntities = userRepository.findByEmailAndPassword(email, password);
         if(userEntities.isEmpty())
-            throw new RuntimeException("Usuario não existe");
-        return dataProviderUserMapper.toMapper(userEntities.get(0));
+            throw new UserNotFound(email);
+        return dataProviderUserMapper.toDomain(userEntities.getFirst());
+    }
+
+    public UserDomain signUp(final UserDomain userDomain) {
+        UserEntity entity = dataProviderUserMapper.toEntity(userDomain);
+        UserEntity save = userRepository.save(entity);
+        return dataProviderUserMapper.toDomain(save);
     }
 }
